para ver por donde vamos part2

--- a/Parcial2_JosueRusso/Client/Pages/Registros/R_Entradas.razor
+++ b/Parcial2_JosueRusso/Client/Pages/Registros/R_Entradas.razor
@@ -1,5 +1,13 @@
-﻿<h3>R_Entradas</h3>
+﻿@page "/Entradas"
+@page "/Entradas/{EntradasId:int}"
+@inject HttpClient httpClient
+@inject NotificationService notificationService
 
 @code {
+
+    public int EntradaId { get; set; }
+
+    public Entradas Entradas {}
+
 
 }
