modificando el EntradasController

--- a/Parcial2_JosueRusso/Client/Pages/Consulta/C_Entradas.razor
+++ b/Parcial2_JosueRusso/Client/Pages/Consulta/C_Entradas.razor
@@ -1,5 +1,96 @@
-﻿<h3>C_Entradas</h3>
+﻿@page "/Entradas"
+
+@inject HttpClient httpClient
+
+<div class="card">
+    <div class="card">
+
+        <div class="card-header">
+            <h3> Consulta de Productos Empacados </h3>
+        </div>
+
+        <div class="card-body">
+
+            <form>
+                <div class="input-group d-flex align-items-end">
+
+                    <InputSelect class="form-control col-2" @bind-Value="filtro">
+                        <option value="1">EntradaId</option>
+                        <option value="2">Fecha</option>
+                        <option value="3">PesoTotal</option>
+                        <option value="4">ProductoId</option>
+                        <option value="5">CantidadProducida</option>
+                    </InputSelect>
+
+                    <div class="flex-fill mx-2">
+
+                        <div class="input-group">
+                            <label class="input-group-text"> Busqueda </label>
+                            <InputText class="form-control" @bind-Value="Criterio" />
+                        </div>
+
+                    </div>
+
+                    <button type="button" class="btn btn-sm-10 btn-primary" @onclick="Buscar"> <span class="oi oi-magnifying-glass"></span> Buscar </button>
+                </div>
+            </form>
+
+        </div>
+        @if (Entradas is not null)
+        {
+            <table class="table table-striped table-hover">
+                <thead>
+                    <tr>
+                        <th>EntradaId</th>
+                        <th>Fecha</th>
+                        <th>Concepto</th>
+                        <th>Peso Total</th>
+                        <th>ProductoId</th>
+                        <th>Cantidad Producida</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var entradas in Entradas)
+                    {
+                        <tr>
+                            <td>@entradas.EntradaId</td>
+                            <td>@entradas.Fecha</td>
+                            <td>@entradas.Concepto</td>
+                            <td>@entradas.PesoTotal</td>
+                            <td>@entradas.ProductoId</td>
+                            <td>@entradas.CantidadProducida</td>               
+                            <td><a href="Entradas/@entradas.EntradaId">Ver</a></td>
+                        </tr>
+                    }
+
+                </tbody>
+
+            </table>
+        }
+    </div>
+    <div class="card-footer">
+        <div class="form-row justify-content-sm-between" aria-orientation="vertical">
+            <div class="col-3">
+                <label for="CantidaRegistro" class="col-form-label"><strong>Filas</strong>&nbsp;</label>
+                <input id="CantidaRegistro" @bind-value="@conteo" disabled class="form-control" />
+            </div>
+        </div>
+    </div>
+</div>
 
 @code {
+    public List<Entradas>? Entradas { get; set; }
+    public int conteo { get; set; }
+    public string filtro { get; set; }
+    public string Criterio { get; set; }
 
+    public async Task Buscar()
+    {
+        Entradas = await httpClient.GetFromJsonAsync<List<Entradas>>($"api/Entradas");
+
+        conteo = Entradas != null ? Entradas!.Count() : 0;
+        StateHasChanged();
+
+    }
 }
