--- a/Parcial2_JosueRusso/Client/Shared/NavMenu.razor
+++ b/Parcial2_JosueRusso/Client/Shared/NavMenu.razor
@@ -15,13 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Entradas">
-                <span class="oi oi-plus" aria-hidden="true"></span> Entradas
+            <NavLink class="nav-link" href="RegistroProductos">
+                <span class="oi oi-plus" aria-hidden="true"></span> Entradas de productos 
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/Entrada">
+            <NavLink class="nav-link" href="ConsultaEntradas">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Entradas
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="ConsultaProductos">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Productos
             </NavLink>
         </div>
     </nav>
